Squashed 'server/' changes from 253f992..954189e
954189e Merge pull request #10 from ryl1k/dev
2b6b01e feat: add migrations service to docker-compose for database management
93d8300 Merge pull request #9 from ryl1k/dev
1420f47 Merge branch 'main' into dev
1ae3d78 docs: Add security definitions and ApiKeyAuth to order endpoints in Swagger documentation
f68831d updated docs and dockerfiles
5e31762 updated .env.example
1384873 updated docs
c481449 updated docs
2f21598 docs: Update README for enhanced clarity and structure; add security and operational procedures sections
32b60cc Pulled latest from server
19a330a changed pagination limits

git-subtree-dir: server
git-subtree-split: 954189e3d8e42646e1cfd62aab3594245675b25d
