# docs/swagger.json
@@ -10,6 +10,11 @@
     "paths": {
         "/v1/orders": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Retrieve a paginated list of orders with optional filters for status, amount, and dates.",
                 "consumes": [
                     "application/json"
@@ -117,6 +122,11 @@
                 }
             },
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Manually create a new order with tax rates and jurisdictions.",
                 "consumes": [
                     "application/json"
@@ -159,10 +169,41 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "description": "Remove all orders from the database.",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "orders"
+                ],
+                "summary": "Delete all orders",
+                "responses": {
+                    "204": {
+                        "description": "No Content"
+                    },
+                    "500": {
+                        "description": "Internal server error",
+                        "schema": {
+                            "$ref": "#/definitions/response.Response"
+                        }
+                    }
+                }
             }
         },
         "/v1/orders/import": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Uploads a CSV file, validates format and size, and processes orders asynchronously.",
                 "consumes": [
                     "multipart/form-data"
@@ -207,6 +248,11 @@
         },
         "/v1/orders/{id}": {
             "get": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Fetch detailed information about a specific order using its unique identifier.",
                 "consumes": [
                     "application/json"
@@ -412,6 +458,13 @@
                     "$ref": "#/definitions/response.Metadata"
                 }
             }
+        }
+    },
+    "securityDefinitions": {
+        "ApiKeyAuth": {
+            "type": "apiKey",
+            "name": "x-api-key",
+            "in": "header"
         }
     }
 }
